--- a/index.html
+++ b/index.html
@@ -108,6 +108,54 @@
     </div>
   </section>
 
+
+  <section>
+    <div class="container">
+      <div class="text-stars">
+        <div class="text-section">
+          <h1></h1>
+          <p></p>
+        </div>
+        <div class="stars">
+          <div class="stars-card"></div>
+          <div class="stars-card"></div>
+          <div class="stars-card"></div>
+        </div>
+      </div>
+      <div class="client-cards">
+        <div class="client-card">
+          <div class="author">
+            <img src="" alt="">
+            <div class="author-name">
+              <small></small>
+              <small></small>
+            </div>
+          </div>
+          <p></p>
+        </div>
+        <div class="client-card">
+          <div class="author">
+            <img src="" alt="">
+            <div class="author-name">
+              <small></small>
+              <small></small>
+            </div>
+          </div>
+          <p></p>
+        </div>
+        <div class="client-card">
+          <div class="author">
+            <img src="" alt="">
+            <div class="author-name">
+              <small></small>
+              <small></small>
+            </div>
+          </div>
+          <p></p>
+        </div>
+      </div>
+    </div>
+  </section>
   <script src="./js/time.js"></script>
 </body>
 </html>
