--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
       </div>
       <div class="client-cards">
-        <div class="client-card">
+        <div class="client-card card__1">
           <div class="author">
             <img src="" alt="">
             <div class="author-name">
@@ -133,7 +133,7 @@
           </div>
           <p></p>
         </div>
-        <div class="client-card">
+        <div class="client-card card__2">
           <div class="author">
             <img src="" alt="">
             <div class="author-name">
@@ -143,7 +143,7 @@
           </div>
           <p></p>
         </div>
-        <div class="client-card">
+        <div class="client-card card__3">
           <div class="author">
             <img src="" alt="">
             <div class="author-name">
