--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="author">
             <img src="" alt="">
             <div class="author-name">
-              <small></small>
+              <small>Vards uzvards</small>
               <small></small>
             </div>
           </div>
@@ -137,7 +137,7 @@
           <div class="author">
             <img src="" alt="">
             <div class="author-name">
-              <small></small>
+              <small>Vards uzvards</small>
               <small></small>
             </div>
           </div>
@@ -147,7 +147,7 @@
           <div class="author">
             <img src="" alt="">
             <div class="author-name">
-              <small></small>
+              <small>Vards uzvards</small>
               <small></small>
             </div>
           </div>
