--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
 
   <section>
-    <div class="container grid">
+    <div class="container">
+      <div class="grid">
       <div class="card card-1">
         <div class="author-info">
           <img src="./img/image-daniel.jpg" class="author-img">
@@ -65,7 +66,7 @@
         </div>
         <div class="text">
           <h2 class="h2">Such a life-changing experience. Highly recommended!</h2>
-          <p class="p">“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
+          <p class="p kira">“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from 
             professionals who can help me learn programming step by step. I was encouraged to enroll by a former 
             student of theirs who can only say wonderful things about the program. The entire curriculum and staff 
             did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team 
@@ -106,6 +107,7 @@
             an incredible community of smart and amazing people. ”</p>
         </div>
       </div>
+    </div>
     </div>
   </section>
 
