--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Time page</title>
+  <link rel="stylesheet" href="./node_modules/hover.css/css/hover.css">
   <link rel="stylesheet" href="./css/responsive.css">
   <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -22,7 +23,7 @@
   <section>
     <div class="container">
       <div class="grid">
-      <div class="card card-1">
+      <div class="card card-1 hvr-glow">
         <div class="author-info">
           <img src="./img/image-daniel.jpg" class="author-img">
           <div class="author-name">
@@ -42,7 +43,7 @@
             the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</p>
         </div>
       </div>
-      <div class="card card-2">
+      <div class="card card-2 hvr-glow">
         <div class="author-info">
           <img src="./img/image-jonathan.jpg" class="author-img">
           <div class="author-name">
@@ -56,7 +57,7 @@
             for a big company. This was one of the best investments I’ve made in myself. ”</p>
         </div>
       </div>
-      <div class="card card-3">
+      <div class="card card-3 hvr-glow">
         <div class="author-info">
           <img src="./img/image-kira.jpg" class="author-img">
           <div class="author-name">
@@ -76,7 +77,7 @@
             100% recommend! ”</p>
         </div>
       </div>
-      <div class="card card-4">
+      <div class="card card-4 hvr-glow">
         <div class="author-info">
           <img src="./img/image-jeanette.jpg" class="author-img">
           <div class="author-name">
@@ -90,7 +91,7 @@
             while doing something I love. ”</p>
         </div>
       </div>
-      <div class="card card-5">
+      <div class="card card-5 hvr-glow">
         <div class="author-info">
           <img src="./img/image-patrick.jpg" class="author-img">
           <div class="author-name">
