--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Time page</title>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   <link rel="stylesheet" href="./node_modules/hover.css/css/hover.css">
   <link rel="stylesheet" href="./css/responsive.css">
   <link rel="stylesheet" href="./css/style.css">
@@ -11,8 +15,8 @@
 <body>
   <header>
     <div class="container">
-      <div class="time-container">
-        <div class="hours margin-20" id="hours"></div>
+      <div class="time-container animate__animated animate__backInDown animate__slow">
+        <div class="hours margin-20 " id="hours"></div>
         <div class="minutes margin-20" id="minutes"></div>
         <div class="seconds margin-20" id="seconds"></div>
       </div>
@@ -22,7 +26,7 @@
 
   <section>
     <div class="container">
-      <div class="grid">
+      <div class="grid animate__animated animate__fadeIn animate__delay-3s	animate__slow">
       <div class="card card-1 hvr-glow">
         <div class="author-info">
           <img src="./img/image-daniel.jpg" class="author-img">
