--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <div class="container">
-      <div class="time-container animate__animated animate__backInDown animate__slow">
+      <div class="time-container animate__animated animate__slideInDown animate__slow">
         <div class="hours margin-20 " id="hours"></div>
         <div class="minutes margin-20" id="minutes"></div>
         <div class="seconds margin-20" id="seconds"></div>
