--- a/index.html
+++ b/index.html
@@ -113,49 +113,80 @@
   </section>
 
 
-  <section>
+  <section class="star-section">
     <div class="container">
       <div class="text-stars">
         <div class="text-section">
-          <h1></h1>
-          <p></p>
+          <h1>10,000+ of our users love our products.</h1>
+          <p>We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services.</p>
         </div>
         <div class="stars">
-          <div class="stars-card"></div>
-          <div class="stars-card"></div>
-          <div class="stars-card"></div>
+          <div class="stars-card">
+            <div class="stars-img">
+              <img src="./img/icon-star.svg" alt="">
+              <img src="./img/icon-star.svg" alt="">
+              <img src="./img/icon-star.svg" alt="">
+              <img src="./img/icon-star.svg" alt="">
+              <img src="./img/icon-star.svg" alt="">
+            </div>
+            <p>Rated 5 Stars in Reviews</p>
+          </div>
+          <div class="stars-card">
+            <div class="stars-img">
+              <img src="./img/icon-star.svg" alt="">
+              <img src="./img/icon-star.svg" alt="">
+              <img src="./img/icon-star.svg" alt="">
+              <img src="./img/icon-star.svg" alt="">
+              <img src="./img/icon-star.svg" alt="">
+            </div>
+            <p>Rated 5 Stars in Report Guru</p>
+          </div>
+          <div class="stars-card">
+            <div class="stars-img">
+              <img src="./img/icon-star.svg" alt="">
+              <img src="./img/icon-star.svg" alt="">
+              <img src="./img/icon-star.svg" alt="">
+              <img src="./img/icon-star.svg" alt="">
+              <img src="./img/icon-star.svg" alt="">
+            </div>
+            <p>Rated 5 Stars in BestTech</p>
+          </div>
         </div>
       </div>
       <div class="client-cards">
         <div class="client-card card__1">
           <div class="author">
-            <img src="" alt="">
+            <img src="./img/image-colton.jpg" alt="" class="author-img">
             <div class="author-name">
-              <small>Vards uzvards</small>
-              <small></small>
+              <small class="author_name">Colton Smith</small>
+              <small class="author_surname">Verified Buyer</small>
             </div>
           </div>
-          <p></p>
+          <p>"We needed the same printed design as the one we had ordered a week prior.
+            Not only did they find the original order, but we also received it in time.
+            Excellent!"</p>
         </div>
         <div class="client-card card__2">
           <div class="author">
-            <img src="" alt="">
+            <img src="./img/image-irene.jpg" alt="" class="author-img">
             <div class="author-name">
-              <small>Vards uzvards</small>
-              <small></small>
+              <small class="author_name">Irene Roberts</small>
+              <small class="author_surname">Verified Buyer</small>
             </div>
           </div>
-          <p></p>
+          <p>"Customer service is always excellent and very quick turn around. Completely
+            delighted with the simplicity of the purchase and the speed of delivery."</p>
         </div>
         <div class="client-card card__3">
           <div class="author">
-            <img src="" alt="">
+            <img src="./img/image-anne.jpg" alt="" class="author-img">
             <div class="author-name">
-              <small>Vards uzvards</small>
-              <small></small>
+              <small class="author_name">Anne Wallace</small>
+              <small class="author_surname">Verified Buyer</small>
             </div>
           </div>
-          <p></p>
+          <p>"Put an order with this company and can only praise them for the very high
+            standard. Will definitely use them again and recommend them to everyone!"</p>
         </div>
       </div>
     </div>
