--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <p>We only provide great products combined with excellent customer service. See what our satisfied customers are saying about our services.</p>
         </div>
         <div class="stars">
-          <div class="stars-card">
+          <div class="stars-card card__star_1">
             <div class="stars-img">
               <img src="./img/icon-star.svg" alt="">
               <img src="./img/icon-star.svg" alt="">
@@ -135,7 +135,7 @@
             </div>
             <p>Rated 5 Stars in Reviews</p>
           </div>
-          <div class="stars-card">
+          <div class="stars-card card__star_2">
             <div class="stars-img">
               <img src="./img/icon-star.svg" alt="">
               <img src="./img/icon-star.svg" alt="">
@@ -145,7 +145,7 @@
             </div>
             <p>Rated 5 Stars in Report Guru</p>
           </div>
-          <div class="stars-card">
+          <div class="stars-card card__star_3">
             <div class="stars-img">
               <img src="./img/icon-star.svg" alt="">
               <img src="./img/icon-star.svg" alt="">
@@ -158,7 +158,7 @@
         </div>
       </div>
       <div class="client-cards">
-        <div class="client-card card__1">
+        <div class="client-card">
           <div class="author">
             <img src="./img/image-colton.jpg" alt="" class="author-img">
             <div class="author-name">
