--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
       </div>
       <div class="client-cards">
-        <div class="client-card">
+        <div class="client-card card__1">
           <div class="author">
             <img src="./img/image-colton.jpg" alt="" class="author-img">
             <div class="author-name">
@@ -167,7 +167,7 @@
             </div>
           </div>
           <p>"We needed the same printed design as the one we had ordered a week prior.
-            Not only did they find the original order, but we also received it in time.
+            Not only did they find the original order, but we also received in time.
             Excellent!"</p>
         </div>
         <div class="client-card card__2">
