--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <section>
     <div class="container">
-      <div class="grid animate__animated animate__fadeIn animate__delay-3s	animate__slow">
+      <div class="grid">
       <div class="card card-1 hvr-glow">
         <div class="author-info">
           <img src="./img/image-daniel.jpg" class="author-img">
